--- a/style.css
+++ b/style.css
@@ -1,21 +1,29 @@
 body {
-    background-color: #CCCCCC;
+    background-color: #CCCCCC; 
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
 }
 
 .container {
-    display: block;
     background-color: #1D0C20;
+    margin: auto;
     padding: .9rem;
     border-radius: 10px;
+    text-align: center;
 
+    width: 600px;
 
     color: #f5f5f5;
 }
 
 .title {
     color: #FECD23;
+    font-size: 1.5rem;
+    font-weight: 600;
 }
-
+.content {
+    font-size: .9rem;
+    margin: 35px 0;
+}
 
 .forms {
     background-color: #651F71;
