--- a/style.css
+++ b/style.css
@@ -1,23 +1,35 @@
 body {
     background-color: #CCCCCC; 
-    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif
+    font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+}
+
+input {
+    width: 75%;
+    height: 15px;
+    padding: 8px;
+    font-size: .9rem;
+    border-radius: 12px;
+    border: 0;
+    margin: 10px;
 }
 
 .container {
     background-color: #1D0C20;
     margin: auto;
-    padding: .9rem;
+    padding: 1.5rem;
     border-radius: 10px;
-    text-align: center;
 
     width: 600px;
-
+    
+    text-align: center;
     color: #f5f5f5;
+
+    overflow: hidden;
 }
 
 .title {
     color: #FECD23;
-    font-size: 1.5rem;
+    font-size: 1.6rem;
     font-weight: 600;
 }
 .content {
@@ -29,11 +41,18 @@ body {
     background-color: #651F71;
     padding: .9rem;
     border-radius: 10px;
-    
+
+    font-size: 1.3rem;
+    font-weight: 500;
+    letter-spacing: .03rem
+}
+.form-request {
+    margin-bottom: 15px;
 }
 
 .cards {
     display: flex;
+    margin-top: 15px;
     justify-content: space-around;
     width: 100%;
 }
