--- a/style.css
+++ b/style.css
@@ -5,12 +5,24 @@ body {
 
 input {
     width: 75%;
-    height: 15px;
+    height: 17px;
     padding: 8px;
-    font-size: .9rem;
+    font-size: 1rem;
     border-radius: 12px;
     border: 0;
     margin: 10px;
+}
+
+button {
+    background-color: #1D0C20; 
+    width: 75%;
+    padding: 15px;
+    margin-bottom: 20px;
+    border-radius: 10px;
+    border: 0;
+
+    color: white;
+    font-size: 1.2rem;
 }
 
 .container {
@@ -19,7 +31,7 @@ input {
     padding: 1.5rem;
     border-radius: 10px;
 
-    width: 600px;
+    width: 680px;
     
     text-align: center;
     color: #f5f5f5;
@@ -29,38 +41,43 @@ input {
 
 .title {
     color: #FECD23;
-    font-size: 1.6rem;
+    font-size: 2.1rem;
     font-weight: 600;
 }
 .content {
-    font-size: .9rem;
-    margin: 35px 0;
+    font-size: 1rem;
+    margin: 0px 0;
+    padding: .9rem;
 }
 
 .forms {
     background-color: #651F71;
-    padding: .9rem;
     border-radius: 10px;
+    margin-top: 15px;
 
-    font-size: 1.3rem;
+    font-size: 1.6rem;
     font-weight: 500;
-    letter-spacing: .03rem
+    letter-spacing: 0;
 }
 .form-request {
-    margin-bottom: 15px;
+    padding: .9rem;
 }
 
 .cards {
     display: flex;
-    margin-top: 15px;
+    margin: 10px 0 0;
     justify-content: space-around;
     width: 100%;
 }
 .card {
     background-color: #5896F6;
-    border: 5px solid blue;
-    border-radius: 4px;
+    border: 10px solid blue;
+    border-radius: 25px;
+    margin: 20px;
 
-    padding: 5px;
+  
 
+}
+.card-title {
+    margin-top: 20px;
 }
